--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -7,11 +7,17 @@
 
 \newcommand{\degreeof}{\mathsf{deg}}
 
-\newcommand{\derdagsof}[1]{\mathsf{DerDAGs}[ #1 ]}
+\newcommand{\dersinvs}{\mathsf{DersInvs}}
+
+\newcommand{\dersrels}{\mathsf{DersRels}}
+
+\newcommand{\dertrees}[1]{\mathsf{DerTrees}[ #1 ]}
 
 \newcommand{\evalrules}{\mathsf{EvalRules}}
 
 \newcommand{\evalsto}{\Downarrow}
+
+\newcommand{\explabel}{\mathsf{explbl}}
 
 \newcommand{\expr}{\mathsf{Exprs}}
 
@@ -22,6 +28,10 @@
 \newcommand{\freevars}{\mathsf{FreeVars}}
 
 \newcommand{\hastype}{\vdash}
+
+\newcommand{\head}{\mathsf{hd}}
+
+\newcommand{\immsubtrees}[1]{\mathsf{ImmSubtrees}[ #1 ]}
 
 \newcommand{\isind}{\mathsf{IsInd}}
 
@@ -37,7 +47,7 @@
 
 \newcommand{\ops}{\mathsf{ops}}
 
-\newcommand{\relinvs}{\mathsf{RelInvs}}
+\newcommand{\relinvs}[2]{\mathsf{RelInvs}[ #1, #2 ]}
 
 \newcommand{\solveitp}{\textsc{SolveItp}\xspace}
 
