--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -7,7 +7,7 @@
 
 \newcommand{\degreeof}{\mathsf{deg}}
 
-\newcommand{\dersinvs}{\mathsf{DersInvs}}
+\newcommand{\dersinvs}[2]{\mathsf{DersInvs}[ #1, #2 ]}
 
 \newcommand{\dersrels}{\mathsf{DersRels}}
 
@@ -17,7 +17,7 @@
 
 \newcommand{\evalsto}{\Downarrow}
 
-\newcommand{\explabel}{\mathsf{explbl}}
+\newcommand{\explabel}[1]{\mathsf{ExpLbl}[ #1 ]}
 
 \newcommand{\expr}{\mathsf{Exprs}}
 
@@ -29,7 +29,7 @@
 
 \newcommand{\hastype}{\vdash}
 
-\newcommand{\head}{\mathsf{hd}}
+\newcommand{\head}[1]{\mathsf{hd}[ #1 ]}
 
 \newcommand{\immsubtrees}[1]{\mathsf{ImmSubtrees}[ #1 ]}
 
