--- a/draft/std.tex
+++ b/draft/std.tex
@@ -80,7 +80,7 @@
 
 \newtheorem{ex}{\bf{Example}}
 
-\newtheorem{lemma}{\bf{Lemma}}
+% \newtheorem{lemma}{\bf{Lemma}}
 
 \newtheorem{thm}{\bf{Theorem}}
 
