--- a/draft/cmds.tex
+++ b/draft/cmds.tex
@@ -1,6 +1,6 @@
 \renewcommand{\ttdefault}{pxtt}
 
-\newcommand{\URL}{\url}
+% \newcommand{\URL}{\url}
 \newcommand{\cc}[1]{\mbox{\smaller[0.5]\texttt{#1}}}
 
 %\clubpenalty=10000
@@ -59,9 +59,9 @@
 
 % per-author notes:
 % ref. http://en.wikibooks.org/wiki/LaTeX/Colors
-\newcommand{\BH}[1]{\textcolor{Red}{BH: #1}}
+\newcommand{\BH}[1]{\textcolor{red}{BH: #1}}
 \newcommand{\RJ}[1]{\textcolor{Violet}{RJ: #1}}
-\newcommand{\NV}[1]{\textcolor{Green}{NV: #1}}
+\newcommand{\NV}[1]{\textcolor{green}{NV: #1}}
 
 %% Ensure ligatures (e.g., ``fine official flag'') can be copy/pasted from PDF.
 \input{glyphtounicode}
