--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -9,7 +9,7 @@
 
 \newcommand{\dersinvs}[2]{\mathsf{DersInvs}[ #1, #2 ]}
 
-\newcommand{\dersrels}{\mathsf{DersRels}}
+\newcommand{\dersrels}[2]{\mathsf{DersRels}[ #1, #2 ]}
 
 \newcommand{\dertrees}[1]{\mathsf{DerTrees}[ #1 ]}
 
@@ -20,6 +20,8 @@
 \newcommand{\explabel}[1]{\mathsf{ExpLbl}[ #1 ]}
 
 \newcommand{\expr}{\mathsf{Exprs}}
+
+\newcommand{\exprel}[1]{\mathsf{ExpRel}[ #1 ]}
 
 \newcommand{\fix}[2]{\cc{fix}\ #1\ #2}
 
@@ -62,6 +64,8 @@
 \newcommand{\symstep}[2]{\psi[ #1 ; #2 ]}
 
 \newcommand{\symvars}[1]{\mathsf{symvars}_{#1}}
+
+\newcommand{\symvarsidx}[2]{\mathsf{SymVarsIdx}[ #1, #2 ]}
 
 \newcommand{\types}{\mathsf{Types}}
 
