--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -57,9 +57,9 @@
 
 \newcommand{\stlc}{\mathsf{STLC}}
 
-\newcommand{\subexps}{\mathsf{SubExps}}
+\newcommand{\subexps}[1]{\mathsf{SubExps}[ #1 ]}
 
-\newcommand{\symrels}{\mathsf{SymRels}}
+\newcommand{\symrels}[2]{\mathsf{SymRels}[ #1, #2 ]}
 
 \newcommand{\symstep}[2]{\psi[ #1 ; #2 ]}
 
