--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -1,9 +1,29 @@
 % shorthand: paper-specific shorthand
+\newcommand{\apps}[1]{\mathsf{Apps}_{#1}}
+
+\newcommand{\appsof}[1]{\mathsf{Apps}[ #1 ]}
+
+\newcommand{\argsof}[1]{\mathsf{Args}[ #1 ]}
+
+\newcommand{\arityof}[1]{\mathsf{Arity}_{#1}}
+
+\newcommand{\bodies}[1]{\mathsf{Bodies}_{#1}}
+
+\newcommand{\bodyof}[1]{\mathsf{Body}_{#1}}
+
 \newcommand{\base}{\mathsf{Base}}
+
+\newcommand{\chc}[1]{\mathsf{CHC}[ #1 ]}
+
+\newcommand{\chcs}[1]{\mathsf{CHCs}[ #1 ]}
 
 \newcommand{\chkinductive}{\textsc{ChkInd}\xspace}
 
+\newcommand{\clauses}[1]{\mathsf{Clauses}[ #1 ]}
+
 \newcommand{\const}{\mathsf{Const}}
+
+\newcommand{\ctrof}[1]{\mathsf{Ctr}[#1]}
 
 \newcommand{\degreeof}{\mathsf{deg}}
 
@@ -33,7 +53,11 @@
 
 \newcommand{\head}[1]{\mathsf{hd}[ #1 ]}
 
+\newcommand{\headof}[1]{\mathsf{Head}_{#1}}
+
 \newcommand{\immsubtrees}[1]{\mathsf{ImmSubtrees}[ #1 ]}
+
+\newcommand{\interps}[1]{\mathsf{Interps_{ #1 }}}
 
 \newcommand{\isind}{\mathsf{IsInd}}
 
@@ -45,11 +69,21 @@
 
 \newcommand{\mergeinvs}{\textsc{MergeInvs}\xspace}
 
+\newcommand{\nodes}[1]{\mathsf{Nodes}[ #1 ]}
+
 \newcommand{\nonequiv}{\mathsf{NonEquiv}}
 
 \newcommand{\ops}{\mathsf{ops}}
 
+\newcommand{\queryof}[1]{\mathsf{Query}_{#1}}
+
 \newcommand{\relinvs}[2]{\mathsf{RelInvs}[ #1, #2 ]}
+
+\newcommand{\relpreds}{\mathsf{Preds}}
+
+\newcommand{\relof}[1]{\mathsf{Rel}[ #1 ]}
+
+\newcommand{\relsof}[1]{\mathsf{Rels}_{#1}}
 
 \newcommand{\solveitp}{\textsc{SolveItp}\xspace}
 
