--- a/draft/approach.tex
+++ b/draft/approach.tex
@@ -320,8 +320,10 @@ D_1)$.
 
 \subsubsection{Checking inductiveness of derivation invariants}
 \label{sec:chk-ind}
+
 %
-\BH{define the inductiveness over derivation relational invariants}
+\BH{define procedure that checks inductiveness of given relational
+  invariants}
 
 \subsubsection{Verifying equivalence of derivations}
 \label{sec:verify-ders}
@@ -348,8 +350,10 @@ The relational predicates of $\mathcal{S}$ are $C_0 \times C_1$.
 
 % define clauses:
 The clauses of $\mathcal{S}$ are defined as follows.
+
 %
 \BH{clauses that model steps of $P_0$}
+
 %
 \BH{clauses that model steps of $P_1$}
 
