--- a/draft/cmds.tex
+++ b/draft/cmds.tex
@@ -62,6 +62,7 @@
 \newcommand{\BH}[1]{\textcolor{red}{BH: #1}}
 \newcommand{\RJ}[1]{\textcolor{Violet}{RJ: #1}}
 \newcommand{\NV}[1]{\textcolor{green}{NV: #1}}
+\newcommand{\QZ}[1]{\textcolor{orange}{QZ: #1}}
 
 %% Ensure ligatures (e.g., ``fine official flag'') can be copy/pasted from PDF.
 \input{glyphtounicode}
