--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -31,6 +31,8 @@
 
 \newcommand{\dersrels}[2]{\mathsf{DersRels}[ #1, #2 ]}
 
+\newcommand{\derstep}[2]{\mathsf{DerStep}[ #1, #2 ]}
+
 \newcommand{\dertrees}[1]{\mathsf{DerTrees}[ #1 ]}
 
 \newcommand{\evalrules}{\mathsf{EvalRules}}
