--- a/draft/background.tex
+++ b/draft/background.tex
@@ -446,6 +446,8 @@ then $\sigma$ is a \emph{partial solution} of $\mathcal{S}$.
 If, in addition, $\sigma(\queryof{ \mathcal{S} }) \entails \false$,
 then $\sigma$ is a \emph{solution} of $\mathcal{S}$.
 
+\QZ{define derivations of a CHC system}
+
 %%% Local Variables: 
 %%% mode: latex
 %%% TeX-master: "p"
